# spoon-diversity-study

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE_MIT.txt  Makefile  README.md  README_SpoonDiversityStudy_v0.3.md  guidance_spoon_v0.3.ttl  guidance_spoon_v0.4.ttl  ontology_hierarchy_v0.3.dot  ontology_hierarchy_v0.4.dot  pyproject.toml  sonar-project.properties  spoon_analysis_pipeline_v0.3.mmd  spoon_analysis_pipeline_v0.4.mmd  spoon_diversity_data_dictionary_v0.3.md  spoon_diversity_data_dictionary_v0.4.md  spoon_diversity_dataset_template_v0.3.csv  spoon_diversity_dataset_template_v0.4.csv  spoon_diversity_study_paper_v0.3.md  spoon_diversity_study_paper_v0.4.md  spoon_experiment_workflow_v0.3.puml  spoon_experiment_workflow_v0.4.puml  spoon_shapes_v0.3.ttl  spoon_shapes_v0.4.ttl  spoon_spore_registry_v0.3.ttl  spoon_spore_registry_v0.4.ttl  spore_SpoonDiversityOntology_v0.3.ttl  spore_SpoonDiversityOntology_v0.4.ttl
.github/workflows/: ci.yml  prerelease.yml  publish.yml  release.yml  sonarcloud.yml
.kiro/steering/: product.md  release.md  security.md  structure.md  tech.md
docs/: ASSIMILATION.md  PUBLISHING.md  SDD_Tooling.md  TRACEABILITY.md
docs/adr/: 0001-semantic-release.md
examples/: spoon_diversity_sample_v0.3.csv
scripts/: kiro  kiro.ps1
src/spoon_diversity/: __init__.py  analysis.py  cli.py  validators.py
tests/: test_analysis.py  test_cli.py  test_validators_extended.py
tests/fixtures/: invalid.csv  invalid.dot  invalid.mmd  invalid.puml  invalid.ttl  valid.csv  valid.dot  valid.mmd  valid.puml  (+2 more)
tools/: bump_version.py
(+41 files in other folders)
