[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "spoon-diversity-tools"
version = "0.4.0"
description = "CLI utilities for the Spoon Diversity Study: validate artifacts and sync data dictionary."
readme = "README_SpoonDiversityStudy_v0.3.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nkllon" }]
dependencies = [
  "rdflib>=7.0.0",
  "pyshacl>=0.23.0",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://example.org/spoon-diversity"
Repository = "https://example.org/spoon-diversity/repo"

[project.scripts]
spoon-diversity = "spoon_diversity.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.5.0",
  "black>=24.0",
  "mypy>=1.8.0",
  "build>=1.2.1",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tomli", "tomllib"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/spoon_diversity"]


